src/assets/main.css
/* main.css; primary: #af1700; secondary: #fab01d */

/* Viewport */
body, html {
	margin: 0;
	width: 100vw;
    min-height: 100vh;
	overflow-x: hidden;
}

/* Header */
.breaker-nav {
	background-color: #af1700 !important;
	border-top: 5px solid #fab01d;
	border-bottom: 5px solid #fab01d;
	z-index: 400;
}

/* Content */
.carousel {
	background: black;
	margin-top: -25px;
}

.carousel img {
	max-height: 90vh;
	width: 100%;
	height: 100%;
	object-fit: cover;
	opacity: 0.75;
}

.icon {
	max-height: 45px;
	margin-left: 15px;
}

.lead {
	color: #666 !important;
	margin: 5px 2px
}

.featurette-divider {
	border-color: #fdb515;
}

.featurette-image {
	max-height: 500px;
	width: 100%;
	height: 100%;
	object-fit: cover;
}

ul, li {
	color: #666
}

/* Footer */
breaker-footer {
	display: block;
	border-bottom: 5px solid #fab01d;
	background-color: #af1700;
}

breaker-footer--other {
	width: 100vw;
	padding: 30px 0 30px 0;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
	align-content: center;
}

breaker-footer--other-left {
	width: calc(50vw - 75px);
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-end;
	align-content: center;
}

breaker-footer--other-center {
	width: 100px;
	padding: 0 0px 0 0px;
}

breaker-footer--other-center > img {
	width: 100px;
	height: 100px;
}

breaker-footer--other-right {
	width: calc(50vw - 75px);
	height: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
	align-content: center;
}

breaker-footer--other a {
	color: #fab01d !important;
	text-decoration: none !important;
	font-size: 17px;
	margin: 0 5px 0 5px;
	opacity: 1;
	transition: opacity 0.2s cubic-bezier(.2, 0, .2, 1);
}

breaker-footer--other a:hover {
	opacity: 0.8;
}



/* Dark Mode  :D  */
body.dark {
    color: white;
    background-color: #1f2224;
    transition: color 500ms linear, background-color 500ms linear !important;
}

    /* Additional target for elements with text */
body.dark h1,
body.dark h2 {
    color: white;
}


body.dark .lead {
    color: white !important;
}

body.dark ul,
body.dark li {
    color: white;
}

.featurette-heading {
    color: #666;
}

body.dark .featurette-heading {
    color: white;
}

body.darkNoTrans .featurette-heading { /* Surely... there's a better way */
    color: white;
}

/* Hover turn orange thingy
body.dark a:hover {
    color: #fab01d;
}
*/

body.dark .breaker-footer--other a {
    color: white !important;
}

body.dark .disabled-link {
    color: white !important;
}


/* Dark Mode  :D  */
body.darkNoTrans {
    color: white;
    background-color: #1f2224;
    transition: color 0ms linear, background-color 0ms linear !important;
}

    /* Additional target for elements with text */
body.darkNoTrans .lead {
    color: white !important;
}

body.darkNoTrans ul,
body.darkNoTrans li {
    color: white;
}



/* Hover turn orange thingy
body.darkNoTrans a:hover {
    color: #fab01d;
}
*/

body.darkNoTrans .breaker-footer--other a {
    color: white !important;
}

body.darkNoTrans .disabled-link {
    color: white !important;
}

body {
    transition: color 500ms linear, background-color 500ms linear;  /* Smooth transition back to light mode */
    color: black;
    background-color: #ffffff;
}



/* Links */
a {
    color: #af1700;
    text-decoration: none;
}
a:hover {
    color: #af1700;
    text-decoration: underline;
}
.disabled-link {
	color: currentColor !important;
	cursor: not-allowed;
	opacity: 0.5;
	text-decoration: none !important;
}

/* Images */
.featurette-image {
	border-radius: 2px !important;
	box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12) !important;
}

#padthisplease {
	padding-bottom: 2%;
}

.resize_1 {
	width: 40px;
	height: 40px;
}

/* Hours */
.hours {
    display: flex;
    justify-content: center;
    margin: 0;
    min-height: 100vh;
    width: 100vw;
}
card {
    margin-top: 100px;
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 100%;
    max-width: 700px;
}
@media (max-width: 750px) {
    card {
        width: 100vw;
        height: 100vh;
        max-height: none;
        max-width: none;
    }
}
card > img {
    display: block;
    width: 30%;
    margin-top: 20px;
}
card > card-title {
    display: block;
    font-size: 40px;
    margin-top: 10px;
    margin-bottom: 20px;
}
card > card-subtitle {
    display: block;
    transform: translateY(-25px);
    font-size: 16px;
}
card > input {
    font-size: 30px;
    border: none;
    width: 80% !important;
    margin-bottom: 20px;
}
card > .form-group {
    width: 80% !important;
    margin-bottom: 20px;
}
    card > .form-group > label {
        margin-bottom: 0.1rem;
    }
card > button {
    margin-top: 10px;
    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
    font-size: 1.2rem !important;
    min-width: 120px;
    padding: 0.375rem 0.75rem 0.5rem 0.75rem !important;
}

.people-table {
    width: 100%;
    border-collapse: collapse;
    border-spacing: 0;
    text-align: left;
    position: relative;
    box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
    margin: 0 60px 60px 60px;
}

.people-table th {
    color: rgba(0, 0, 0, 0.54);
    font-size: 12px;
    font-weight: 500;
    padding: 17px 4px;
    margin: 0;
    overflow: hidden;
    outline: none;
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

.people-table td {
    color: rgba(0, 0, 0, 0.87);
    font-size: 14px;
    font-weight: 400;
    padding: 13.5px 4px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}

.people-table td:first-child,
.people-table th:first-child {
    padding-left: 20px;
}

.people-table td:last-child,
.people-table th:last-child {
    padding-right: 20px;
}

.people-table tr:nth-child(2n) {
    background-color: #F8F8F8 !important;
}

